fixing title alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family:"Garamond";
 }
-title {
+.titles {
     text-align: center;
 }
 .sidenav {
